--- a/WpfElements/WpfElements.csproj
+++ b/WpfElements/WpfElements.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="ObservablePairCollection.cs" />
+  </ItemGroup>
+
 </Project>
