--- a/WpfCustomApplication/WpfCustomApplication.csproj
+++ b/WpfCustomApplication/WpfCustomApplication.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+    <PackageReference Include="MicrosoftExpressionInteractions" Version="3.0.40218" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MVVMCore\MVVMCore.csproj" />
     <ProjectReference Include="..\WpfElements\WpfElements.csproj" />
   </ItemGroup>
