--- a/WpfCustomApplication/WpfCustomApplication.csproj
+++ b/WpfCustomApplication/WpfCustomApplication.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TasksWithPriorityTab\Images\check.png" />
+    <None Remove="TasksWithPriorityTab\Images\circle.png" />
+    <None Remove="TasksWithPriorityTab\Images\error.png" />
+    <None Remove="TasksWithPriorityTab\Images\onhold.png" />
+    <None Remove="TasksWithPriorityTab\Images\refresh.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="MicrosoftExpressionInteractions" Version="3.0.40218" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
@@ -15,6 +23,26 @@
   <ItemGroup>
     <ProjectReference Include="..\MVVMCore\MVVMCore.csproj" />
     <ProjectReference Include="..\WpfElements\WpfElements.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="TasksWithPriorityTab\Images\check.png" />
+    <Resource Include="TasksWithPriorityTab\Images\circle.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="TasksWithPriorityTab\Images\error.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="TasksWithPriorityTab\Images\onhold.png" />
+    <Resource Include="TasksWithPriorityTab\Images\refresh.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="TasksWithPriorityTab\Controls\Spinner.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
