--- a/WpfElements/WpfElements.csproj
+++ b/WpfElements/WpfElements.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="ObservablePairCollection.cs" />
+    <ProjectReference Include="..\MVVMCore\MVVMCore.csproj" />
   </ItemGroup>
 
 </Project>
